# tea_project

./: .gitignore  Procfile  README.md  build.sh  download_flags.ps1  manage.py  nginx.conf  package-lock.json  pyproject.toml  render.yaml  requirements.txt  supabase_client.py  supabase_client.py~
backend/: download_tea_images.py  manage.py  manage.py~  settings.py  supabase_client.py  upload_article_images.py  urls.py
backend/articles/: apps.py  models.py  urls.py  urls.py~  views.py
backend/backend/: urls.py
backend/beer/: urls.py  views.py
backend/coffee/: apps.py  urls.py  views.py
backend/comments/: urls.py  views.py
backend/diagram/: apps.py  context_processors.py  urls.py  urls.py~  views.py  views.py~
backend/diagram/templatetags/: vite_static.py
backend/frontend/: views.py
backend/main/: urls.py  urls.py~  views.py
backend/static/: club.css  test.txt
backend/static/assets/: main.js  (+6 more)
backend/tea/: apps.py  urls.py  urls.py~  views.py  views.py~
backend/tea_project/: settings.py  settings.py~  urls.py  urls.py~  wsgi.py
backend/templates/: base.html  base.html~
backend/templatetags/: vite_static.py
backend/users/: urls.py  views.py
backend/wine/: urls.py  views.py
diagram/: urls.py  views.py
frontend/: package-lock.json  package.json  vite.config.ts  vite.config.ts~
frontend/src/: App.tsx  App.tsx~  index.css  vite-env.d.ts
staticfiles/assets/: main.CD8H2NDl.js
staticfiles/beer/: beer.css
tea/: urls.py  views.py
tea_project/: asgi.py  settings.py  urls.py
templates/: base.html  diagram.html  index.html  teas_list.html
(+75 files in other folders)
