[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tea-project"
version = "1.0.0"
description = "Tea Atlas Project"
requires-python = ">=3.11"
dependencies = [
    "gunicorn==21.2.0",
    "whitenoise==6.6.0",
    "Django==4.2.11",
    "django-cors-headers==4.3.1",
    "django-tinymce==3.7.1",
    "Pillow==10.0.1",
    "python-dotenv==1.0.1",
    "requests==2.31.0",
    "supabase==2.3.4",
] 