[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tea-project"
version = "1.0.0"
description = "Tea Atlas Project"
requires-python = ">=3.8"
dependencies = [
    "gunicorn==20.1.0",
    "whitenoise==6.5.0",
    "Django==4.2.7",
    "django-cors-headers==4.3.0",
    "django-tinymce==3.6.1",
    "Pillow==9.4.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "supabase==2.0.3",
] 